--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <html>
+<head>
+  <style>
+	html, body {
+    pointer-events: none;
+		margin:0;
+		padding:0;
+}
+	iframe {
+		
+		position: fixed;
+		height: 100%;
+		width: 100%;
+		border:none;
+}
+  </style>
+</head>
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
     <iframe width="1518" height="853" src="https://www.youtube-nocookie.com/embed/mNcM7Sl0_CY?&amp;vq=hd853&amp;autoplay=1&amp;loop=1&amp;mute=1" frameborder="0" allowfullscreen=""></iframe>
 </div>
