--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   </style>
 </head>
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
-    <iframe width="1518" height="853" src="https://www.youtube-nocookie.com/embed/mNcM7Sl0_CY?&amp;vq=hd853&amp;autoplay=1&amp;loop=1&amp;mute=1" frameborder="0" allowfullscreen=""></iframe>
+   <form action="/action_page.php">
+    <label for="link">Youtube Link</label><br>
+    <input type="text" id="link" value="https://www.youtube-nocookie.com/embed/mNcM7Sl0_CY?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=1" name="link"><br>
+    <input type="submit" value="Submit">
+  </form>
 </div>
 </body>
 </html>
