--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   </style>
 </head>
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
-   <form action="/action_page.php">
+   <form action="/index.html">
     <label for="link">Youtube Link</label><br>
-    <input type="text" id="link" value="https://www.youtube-nocookie.com/embed/mNcM7Sl0_CY?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=1" name="link"><br>
+    <input type="text" id="link" value="mNcM7Sl0_CY" name="link"><br>
     <input type="submit" value="Submit">
   </form>
+	  <iframe width="1920" height="1080" src="https://www.youtube-nocookie.com/embed/${link}?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=1" frameborder="0" allowfullscreen=""></iframe>
 </div>
 </body>
 </html>
