--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
-   <form action="/index.html">
+   <form action="/wallpaper/action_page.php">
     <label for="link">Youtube Link</label><br>
     <input type="text" id="link" value="mNcM7Sl0_CY" name="link"><br>
     <input type="submit" value="Submit">
