--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
-   <form action="/wallpaper/background.html">
+   <form action="/Wallpaper/background.html">
     <label for="link">Youtube Link</label><br>
     <input type="text" id="link" value="mNcM7Sl0_CY" name="link"><br>
     <input type="submit" value="Submit">
