--- a/background.html
+++ b/background.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
-  <iframe width="1920" height="1080" src="https://www.youtube-nocookie.com/embed/${link}?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=1" frameborder="0" allowfullscreen=""></iframe>
+  <iframe width="1920" height="1080" src="https://www.youtube-nocookie.com/embed/{link}?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=1" frameborder="0" allowfullscreen=""></iframe>
 </div>
 </body>
 </html>
