--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
    <form action="/Wallpaper/background.html">
-    <label for="link">Youtube Link</label><br>
+    <label for="link">Youtube Link (Insert video id only. Put in the text that is in the hashtags https://youtube.com/watch/##########)</label><br>
     <input type="text" id="link" value="mNcM7Sl0_CY" name="link"><br>
     <input type="submit" value="Submit">
   </form>
