--- a/index.html
+++ b/index.html
@@ -20,28 +20,15 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
-  <body>
     <!-- Start your project here-->
-    <div class="container">
-      <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
-        <div class="text-center">
-          <img
-            class="mb-4"
-            src="https://mdbootstrap.com/img/logo/mdb-transparent-250px.png"
-            style="width: 250px; height: 90px"
-          />
-          <h5 class="mb-3">Thank you for using our product. We're glad you're with us.</h5>
-          <p class="mb-3">MDB Team</p>
-          <a
-            class="btn btn-primary btn-lg"
-            href="https://mdbootstrap.com/docs/standard/getting-started/"
-            target="_blank"
-            role="button"
-            >Start MDB tutorial</a
-          >
-        </div>
-      </div>
-    </div>
+<body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
+   <form action="/Wallpaper/background.html">
+    <label for="link">Youtube Link</label><br>
+    <input type="text" id="link" value="mNcM7Sl0_CY" name="link"><br>
+    <input type="submit" value="Submit">
+  </form>
+</div>
+
     <!-- End your project here-->
 
     <!-- MDB -->
