--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <!-- Start your project here-->
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
    <form action="/Wallpaper/background.html">
-    <label for="link">Youtube Link</label><br>
-    <input type="text" id="link" value="mNcM7Sl0_CY" name="link"><br>
-    <input type="submit" value="Submit">
+  <div class="form-outline mb-4">
+    <input type="text" id="form1Example1" class="form-control" />
+    <label class="form-label" for="form1Example1">Youtube link</label>
+  </div>
+<button type="submit" class="btn btn-primary btn-block">Open</button>
   </form>
 </div>
 
