--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
     <!-- Start your project here-->
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
-   <form action="/Wallpaper/background.html">
+   <form class="mx-auto" style="width: 200px" action="/Wallpaper/background.html">
   <div class="form-outline mb-4">
     <input type="text" id="form1Example1" class="form-control" />
     <label class="form-label" for="form1Example1">Youtube link</label>
