--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
   </head>
     <!-- Start your project here-->
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
-   <form class="mx-auto" style="width: 200px" action="/Wallpaper/background.html">
+  <div class="mx-auto" style="width: 200px">
+   <form action="/Wallpaper/background.html">
   <div class="form-outline mb-4">
     <input type="text" id="form1Example1" class="form-control" />
     <label class="form-label" for="form1Example1">Youtube link</label>
   </div>
 <button type="submit" class="btn btn-primary btn-block">Open</button>
   </form>
+  </div>
 </div>
 
     <!-- End your project here-->
