--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
     <!-- Start your project here-->
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
-<hr class="hr" />
+<div class="container px-4">
   <div class="mx-auto" style="width: 200px">
    <form action="/Wallpaper/background.html">
   <div class="form-outline mb-4">
