--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     />
-    <!-- MDB -->
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
-    <!-- Start your project here-->
+
+
+  
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
 <div class="container px-4">
   <div class="mx-auto" style="width: 200px">
@@ -34,11 +36,11 @@
   </div>
 </div>
 
-    <!-- End your project here-->
+   
 
-    <!-- MDB -->
+    <!-- Stylesheet -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- Custom scripts -->
+    <!-- Scripts -->
     <script type="text/javascript"></script>
   </body>
 </html>
