--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 
   
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
+  <img
+  src="/Wallpaper/img/splash.png"
+  class="img-fluid hover-shadow"
+  alt="Splash"
+/>
 <div class="container px-4">
   <div class="mx-auto" style="width: 200px">
    <form action="/Wallpaper/background.html">
