--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <img
   src="/Wallpaper/img/splash.png"
   alt="Splash"
+       width="400" 
+     height="133"
 />
    <form action="/Wallpaper/background.html">
   <div class="form-outline mb-4">
