--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
 <div class="container px-4">
   <div class="mx-auto" style="width: 200px">
-    <img
+   <img
   src="/Wallpaper/img/splash.png"
   alt="Splash"
-       width="400" 
-     height="133"
+       width="600" 
+     height="200"
 />
+  </div>
+  <div class="mx-auto" style="width: 200px">
    <form action="/Wallpaper/background.html">
   <div class="form-outline mb-4">
     <input type="text" id="form1Example1" class="form-control" />
