--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <input type="text" id="form1Example1" class="form-control" />
     <label class="form-label" for="form1Example1">Youtube link</label>
   </div>
+   <div class="form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked/>
+  <label class="form-check-label" for="flexCheckChecked">Checked checkbox</label>
+</div>
 <button type="submit" class="btn btn-primary btn-block">Open</button>
   </form>
   </div>
