--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
    <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked/>
-  <label class="form-check-label" for="flexCheckChecked">Checked checkbox</label>
+  <label class="form-check-label" for="flexCheckChecked">Mute</label>
 </div>
 <button type="submit" class="btn btn-primary btn-block">Open</button>
   </form>
