--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   <div class="mx-auto" style="width: 200px">
    <form action="/Wallpaper/background.html">
   <div class="form-outline mb-4">
-    <input type="text" id="form1Example1" class="form-control" />
-    <label class="form-label" for="form1Example1">Youtube link</label>
+    <input type="text" id="link" class="form-control" />
+    <label class="form-label" for="link">Youtube link</label>
   </div>
    <div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked/>
-  <label class="form-check-label" for="flexCheckChecked">Mute</label>
+  <input class="form-check-input" type="checkbox" value="" id="Mute" checked/>
+  <label class="form-check-label" for="Mute">Mute</label>
 </div>
-<button type="submit" class="btn btn-primary btn-block">Open</button>
+<button type="submit" value="submit class="btn btn-primary btn-block">Open</button>
   </form>
   </div>
 </div>
