--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="mx-auto" style="width: 200px">
    <form action="/Wallpaper/background.html">
   <div class="form-outline mb-4">
-    <input type="text" id="link" class="form-control" />
+    <input type="text" id="link" name="link" class="form-control" />
     <label class="form-label" for="link">Youtube link</label>
   </div>
    <div class="form-check">
