--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <input class="form-check-input" type="checkbox" value="" id="Mute" checked/>
   <label class="form-check-label" for="Mute">Mute</label>
 </div>
-<button type="submit" value="submit class="btn btn-primary btn-block">Open</button>
+<button type="submit" value="submit" class="btn btn-primary btn-block">Open</button>
   </form>
   </div>
 </div>
