--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
     <label class="form-label" for="link">Youtube link</label>
   </div>
    <div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="Mute" checked/>
+  <input class="form-check-input" type="checkbox" value="1" id="Mute" name="mute" checked/>
   <label class="form-check-label" for="Mute">Mute</label>
 </div>
 <button type="submit" class="btn btn-primary btn-block">Open</button>
+     <input type="hidden" id=mute name="mute" value="0"/>
   </form>
   </div>
 </div>
