--- a/background.html
+++ b/background.html
@@ -15,6 +15,21 @@
 }
   </style>
 </head>
+	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">...</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 <body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
     <iframe id="video" width="1920" height="1080" src="https://www.youtube-nocookie.com/embed/${link}?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=1" frameborder="0" allowfullscreen=""></iframe>
   </div>
