--- a/background.html
+++ b/background.html
@@ -23,10 +23,10 @@
         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
         <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">...</div>
+      <div class="modal-body">Due to chrome restrictions you cannot autoplay unmuted videos. Press "accept and play" to continue.</div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary">Accept and Play</button>
       </div>
     </div>
   </div>
