--- a/background.html
+++ b/background.html
@@ -22,13 +22,13 @@
     const params = new URLSearchParams(window.location.search);
     const link = params.get("link");
     const mute = params.get("mute");
-    if (link.includes("https://") = true) {
+    if (link.includes("https://") =+ true) {
       const link = link.replace("https://", "");
     };
-	  if (link.includes("https://www.youtube.com/watch?v=") = true) {
+	  if (link.includes("https://www.youtube.com/watch?v=") =+ true) {
       const link = link.replace("www.youtube.com/watch?v=", "");
     };
-    if (link.includes("https://www.youtube.com/watch?v=") = true) {
+    if (link.includes("https://www.youtube.com/watch?v=") =+ true) {
       const link = link.replace("youtu.be/", "");
     };
     const url = "https://www.youtube-nocookie.com/embed/" + link + "?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=" + mute
