--- a/background.html
+++ b/background.html
@@ -22,14 +22,14 @@
     const params = new URLSearchParams(window.location.search);
     const link = params.get("link");
     const mute = params.get("mute");
-    if (link.includes("https://")) {
-      const vid = link.replace("https://", "");
-    };
-	  if (link.includes("https://www.youtube.com/watch?v=")) {
-      const link = vid.replace("www.youtube.com/watch?v=", "");
+    if (link.includes("https://www.youtube.com/watch?v=")) {
+      const vid = link.replace("www.youtube.com/watch?v=", "");
     };
     if (link.includes("https://www.youtube.com/watch?v=")) {
-      const link = vid.replace("youtu.be/", "");
+      const vid = link.replace("youtu.be/", "");
+    };
+    if (link.includes("https://")) {
+      const vid = vid.replace("https://", "");
     };
     const url = "https://www.youtube-nocookie.com/embed/" + vid + "?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=" + mute
     console.log(url); // "sai"
