--- a/background.html
+++ b/background.html
@@ -20,16 +20,16 @@
   </div>
   <script>
     const params = new URLSearchParams(window.location.search);
-    const link = params.get("link");
+    var link = params.get("link");
     const mute = params.get("mute");
     if (link.includes("https://www.youtube.com/watch?v=")) {
-      const link = link.replace("www.youtube.com/watch?v=", "");
+      link = link.replace("www.youtube.com/watch?v=", "");
     };
     if (link.includes("https://www.youtube.com/watch?v=")) {
-      const link = link.replace("youtu.be/", "");
+      link = link.replace("youtu.be/", "");
     };
     if (link.includes("https://")) {
-      const link = vid.replace("https://", "");
+      link = link.replace("https://", "");
     };
     const url = "https://www.youtube-nocookie.com/embed/" + link + "?&amp;vq=hd1080&amp;autoplay=1&amp;loop=1&amp;mute=" + mute
     console.log(url); // "sai"
