--- a/index.html
+++ b/index.html
@@ -55,40 +55,40 @@
    <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top" alt="Hollywood Sign on The Hill"/>
+      <img src="/Wallpaper/img/Reactive-1.png" class="card-img-top" alt="Hollywood Sign on The Hill"/>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Vinyl and Particls</h5>
         <p class="card-text">
-          Test
+          Webgl reactive wallpaper
         </p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
+      <img src="/Wallpaper/img/Reactive-2.png" class="card-img-top" alt="Palm Springs Road"/>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Test</p>
+        <h5 class="card-title">Fluid</h5>
+        <p class="card-text">Webgl reactive wallpaper</p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+      <img src="/Wallpaper/img/Reactive-3.png" class="card-img-top" alt="Los Angeles Skyscrapers"/>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Test</p>
+        <h5 class="card-title">Audio visualizer</h5>
+        <p class="card-text">Webgl reactive wallpaper</p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top" alt="Skyscrapers"/>
+      <img src="/Wallpaper/img/Reactive-4.png" class="card-img-top" alt="Skyscrapers"/>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Softbody</h5>
         <p class="card-text">
-          Test
+          Webgl reactive wallpaper
         </p>
       </div>
     </div>
