--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   </form>
   </div>
 </div>
+
+  <div class="container px-4">
 <hr class="hr" />
 <h3>Reactive Wallpapers</h3>
   <hr class="hr" />
@@ -99,7 +101,7 @@
   <hr class="hr" />
 <h3>Live Wallpapers</h3>
   <hr class="hr" />
-
+  </div>
   
     <!-- Stylesheet -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
