--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       </div>
     </div>
   </div>
+  <a href="webgl-1.html">
   <div class="col">
     <div class="card h-100">
       <div class="bg-image hover-overlay rounded-3">
@@ -100,6 +101,7 @@
       </div>
     </div>
   </div>
+  </a>
   <div class="col">
     <div class="card h-100">
       <div class="bg-image hover-overlay rounded-3">
