--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
   </div>
   <div class="col">
-    <a href="webgl-1.html">
+    <a href="reactives/2.html">
     <div class="card h-100">
       <div class="bg-image hover-overlay rounded-3">
       <div
@@ -103,6 +103,7 @@
     </a>
   </div>
   <div class="col">
+    <a href="reactives/3.html">
     <div class="card h-100">
       <div class="bg-image hover-overlay rounded-3">
       <div
@@ -122,6 +123,7 @@
       </div>
     </div>
     </div>
+      </a>
     </div>
   <div class="col">
     <div class="card h-100">
