--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   
    <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
-    <a href="reactives/1/index.html">
+    <a href="https://xondee.github.io/Wallpaper/reactives/1/index.html">
     <div class="card h-100">
       <div class="bg-image hover-overlay rounded-3">
       <div
@@ -128,6 +128,7 @@
       </a>
     </div>
   <div class="col">
+    <a href="reactives/4.html">
     <div class="card h-100">
       <div class="bg-image hover-overlay rounded-3">
       <div
@@ -149,6 +150,7 @@
       </div>
       </div>
     </div>
+    </a>
   </div>
 </div>
 
