--- a/reactives/1/index.html
+++ b/reactives/1/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Plexus and Shaders on my Weird TV</title>
+    <title>Vynl thing</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/ambientjam.css">
 </head>
 <body>
     <div id="container"></div>
-    <button id="aboutBtn">About</button>
-    <div id="info" class="modalIinfo">
-        <h1>Plexus and Shaders on my Weird TV</h1>
-        <p>Created by: <a href="https://twitter.com/marcogomez_" target="_blank">@marcogomez_</a> Come say hi! :)</p>
-        <p>Hello there, my name is Marco Gomez and this is a WebGL Demo created using ThreeJS, Vertex Shaders and
-            Fragment Shaders. The purpose of this demo is to stress test shader passes with a PlexusParticles system
-            to evaluate the performance of those visual effects on modern graphics cards, and also to have some fun by
-            looking at some super cool stuff =)</p>
-        <p>You can use the <strong>Open Controls</strong> menu at the bottom left corner of your screen to tweak the
-            parameters and have some fun with the demo!</p>
-        <p>This experiment is better viewed with Google Chrome.</p>
-    </div>
-    <div id="stats"></div>
-    <div id="custom-gui"></div>
 
     <script type="text/javascript" src="lib/three.min.js"></script>
     <script type="text/javascript" src="lib/stats.min.js"></script>
