--- a/reactives/1/index.html
+++ b/reactives/1/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="container"></div>
+    <div id="custom-gui"></div>
 
     <script type="text/javascript" src="lib/three.min.js"></script>
     <script type="text/javascript" src="lib/stats.min.js"></script>
