--- a/index.html
+++ b/index.html
@@ -23,7 +23,52 @@
 
 
   
-<body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed=""><div class="outer">
+<body data-new-gr-c-s-check-loaded="14.1135.0" data-gr-ext-installed="">
+  <nav class="navbar shadow-5-strong navbar-expand-lg bg-primary navbar-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand mt-2 mt-lg-0" href="#">
+        <img
+          src="img/webico.png"
+          height="35"
+          alt="Logo"
+          loading="lazy"
+        />
+      </a>
+      <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Community</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+              Categories
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li>
+                <a class="dropdown-item" href="#liv">Live</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#reacive">Reactive</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Youtube to Wallpaper</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <form class="w-auto">
+          <input type="search" class="form-control" placeholder="Search" aria-label="Search">
+        </form>
+      </div>
+    </div>
+  </nav>
+  <div class="outer">
 <div class="container px-4">
   <div class="mx-auto" style="width: 600px">
    <img
@@ -52,7 +97,7 @@
 
   <div class="container px-4">
 <hr class="hr" />
-<h3>Reactive Wallpapers</h3>
+<h3 id="reacive">Reactive Wallpapers</h3>
   <hr class="hr" />
   
    <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -156,7 +201,7 @@
 
 
   <hr class="hr" />
-<h3>Live Wallpapers</h3>
+<h3 id="liv">Live Wallpapers</h3>
   <hr class="hr" />
   </div>
   
