--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       </div>
     </div>
   </nav>
+  
+  <hr class="hr" />
+  <hr class="hr" />
+  
   <div class="outer">
 <div class="container px-4">
   <div class="mx-auto" style="width: 600px">
